# trdk

./: .gitattributes  .gitignore  CMakeLists.txt  HowTo.Build.Windows.txt  symbols.ini  trade.ini
sources/Common/: .cproject  Accumulators.hpp  Assert.cpp  Assert.hpp  AsyncLog.hpp  CMakeLists.txt  Common.hpp  Common.vcxproj  Common.vcxproj.filters  Constants.h  Crypto.cpp  Crypto.hpp  Currency.cpp  Currency.hpp  Defaults.cpp  Defaults.hpp  DisableBoostWarningsBegin.h  DisableBoostWarningsEnd.h  Dll.hpp  Error.cpp  Error.hpp  Exception.cpp  Exception.hpp  ExpirationCalendar.cpp  ExpirationCalendar.hpp  ExpirationCalendarUTest.cpp  FileSystemChangeNotificator.cpp  FileSystemChangeNotificator.hpp  Foreach.hpp  Fwd.hpp  HttpClient.cpp  HttpClient.hpp  HttpStreamClient.cpp  HttpStreamClient.hpp  Ini.cpp  Ini.hpp  IniFile.cpp  IniFile.hpp  Interlocking.hpp  LockingPolicy.hpp  (+45 more)
sources/Common/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
sources/Core/: .cproject  Account.hpp  Algo.cpp  Algo.hpp  AlgoPositionState.cpp  AlgoPositionState.hpp  Api.h  AsyncLog.cpp  AsyncLog.hpp  Balances.hpp  BalancesContainer.cpp  BalancesContainer.hpp  Bar.hpp  CMakeLists.txt  Consumer.cpp  Consumer.hpp  Context.cpp  Context.hpp  ContextDummy.cpp  ContextDummy.hpp  ContextMock.cpp  ContextMock.hpp  Core.props  Core.rc  Core.vcxproj  Core.vcxproj.filters  DropCopy.cpp  DropCopy.hpp  DropCopyMock.hpp  EventsLog.cpp  EventsLog.hpp  Exception.cpp  Exception.hpp  Fwd.hpp  Instrument.cpp  Instrument.hpp  Interactor.cpp  Interactor.hpp  Log.cpp  Log.hpp  (+73 more)
sources/Core/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
sources/Engine/: .cproject  Api.h  CMakeLists.txt  Context.cpp  Context.hpp  ContextBootstrap.cpp  ContextBootstrap.hpp  Dispatcher.cpp  Dispatcher.hpp  Engine.cpp  Engine.hpp  Engine.props  Engine.rc  Engine.vcxproj  Engine.vcxproj.filters  Enigne.props  FakeTradeSystem.cpp  FakeTradeSystem.hpp  Fwd.hpp  Ini.cpp  Ini.hpp  Main.cpp  MarketData.cpp  Notifier.cpp  Notifier.hpp  Prec.cpp  Prec.hpp  States.cpp  States.hpp  SubscriberPtrWrapper.cpp  SubscriberPtrWrapper.hpp  SubscriptionsManager.cpp  SubscriptionsManager.hpp  Trading.cpp  Types.hpp  Util.cpp  Util.hpp  Version.cpp  run_trader.sh  run_trader_dbg.sh
sources/Engine/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
sources/EngineServer/: .gitignore  CMakeLists.txt  Client.cpp  Client.hpp  ClientRequestHandler.hpp  DropCopyClient.cpp  DropCopyClient.hpp  DropCopyRecord.hpp  DropCopyService.cpp  DropCopyService.hpp  Engine.cpp  Engine.hpp  EngineServer.props  EngineServer.rc  EngineServer.vcxproj  EngineServer.vcxproj.filters  Exception.hpp  Fwd.hpp  Main.cpp  Pack.hpp  Prec.cpp  Prec.hpp  QueueService.cpp  QueueService.hpp  Server.cpp  Server.hpp  Server.vcxproj.filters  Service.cpp  Service.hpp  Settings.cpp  Settings.hpp  run.sh  run_dbg.sh  run_debug.sh  run_debug_dbg.sh  run_debug_test.sh  run_mono.sh  run_mono_dbg.sh  run_multi.sh  run_multi_dbg.sh  (+5 more)
sources/EngineServer/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
sources/EngineService/: .gitignore  CMakeLists.txt  Control.h  DisableProtobufWarningsBegin.h  DisableProtobufWarningsEnd.h  DropCopy.h  EngineService.h  EngineService.props  EngineService.vcxproj  EngineService.vcxproj.filters  Lib.h  MarketData.h  Utils.cpp  Utils.hpp  generate_stabs.sh  test_server.py  trdk.EngineService.Control.proto  trdk.EngineService.DropCopy.proto  trdk.EngineService.MarketData.proto  trdk.EngineService.MarketDataSource.proto  trdk.EngineService.Reports.proto  trdk.EngineService.proto
sources/EngineService/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk
sources/Interaction/Fake/: Api.cpp  Api.h  CMakeLists.txt  Fake.def  Fake.props  Fake.rc  Fake.vcxproj  Fake.vcxproj.filters  FakeMarketDataSource.cpp  FakeMarketDataSource.hpp  FakeSecurity.hpp  FakeTradeSystem.cpp  FakeTradeSystem.hpp  FakeTradingSystem.cpp  FakeTradingSystem.hpp  LiveMarketDataSource.cpp  LiveMarketDataSource.hpp  MarketDataSource.cpp  MarketDataSource.hpp  Prec.cpp  Prec.hpp  TradeSystem.cpp  TradeSystem.hpp  Version.cpp
sources/Interaction/Itch/: Api.h  CMakeLists.txt  Client.cpp  Client.hpp  DataHandler.hpp  Fwd.hpp  HotspotStream.cpp  Itch.def  Itch.props  Itch.rc  Itch.vcxproj  Itch.vcxproj.filters  Prec.cpp  Prec.hpp  Security.cpp  Security.hpp  Stream.cpp  Stream.hpp  Version.cpp
sources/Interaction/OnixsFixConnector/: AlpariStream.cpp  Api.h  CMakeLists.txt  CurrenexSecurity.hpp  CurrenexSession.cpp  CurrenexSession.hpp  CurrenexStream.cpp  CurrenexStream.hpp  CurrenexTrading.cpp  CurrenexTrading.hpp  FastmatchStream.cpp  FastmatchTrading.cpp  FixSecurity.cpp  FixSecurity.hpp  FixSession.cpp  FixSession.hpp  FixStream.cpp  FixStream.hpp  FixTrading.cpp  FixTrading.hpp  Fwd.hpp  FxAllStream.cpp  FxAllTrading.cpp  HotspotTrading.cpp  IntegralStream.cpp  IntegralTrading.cpp  OnixsFixConnector.def  OnixsFixConnector.props  OnixsFixConnector.rc  OnixsFixConnector.vcxproj  OnixsFixConnector.vcxproj.filters  Prec.hpp  Version.cpp
sources/Interaction/Test/: Api.cpp  Api.h  CMakeLists.txt  CsvContinuousContractMarketDataSource.cpp  CsvMarketDataSource.cpp  CsvMarketDataSource.hpp  CsvTickMarketDataSource.cpp  MarketDataSource.cpp  MarketDataSource.hpp  Prec.hpp  RandomMarketDataSource.cpp  RandomMarketDataSource.hpp  Security.hpp  Test.def  Test.props  Test.rc  Test.vcxproj  Test.vcxproj.filters  TradingSystem.cpp  TradingSystem.hpp  TrdkMarketDataLogSource.cpp  Version.cpp
sources/Strategies/FxMb/: Api.h  CMakeLists.txt  EquationPosition.hpp  Fwd.hpp  FxArb1.cpp  FxArb1.hpp  FxArb1Mono.cpp  FxArb1Multi.cpp  FxMb.def  FxMb.props  FxMb.rc  (+21 more)
(+1726 files in other folders)
